# QUTMS_Autonomous

./: .gitmodules  README.md  model.config  model.sdf  qev2_model.sdf
Acceleration_test_track/: model.config
Backwards_Lakeside_test_track/: model.config
Camera/: zed_camera.sdf
Horizon_LiDAR/: horizon_lidar.sdf  model.config
Lakeside_test_track/: model.sdf
QEV2/: model.config  model.sdf  qev2_model.sdf  suspension_soft.sdf
QEV2_GPS/: model.config  qev2_gps.sdf
QEV2_IMU/: model.config  qev2_imu.sdf
QEV2_old/: qev2_model.sdf
QEV2_old/amz_rosbag_extracted/: amz_gps_plot.m
amz_rosbag_extracted/: README.md  amz_gps.csv  amz_gps.txt
catkin_ws-DO_NOT_USE/: README.md
catkin_ws-DO_NOT_USE/devel/: .catkin  _setup_util.py  setup.sh
catkin_ws-DO_NOT_USE/devel/lib/pkgconfig/: qutms_autonomous.pc  qutms_autonomous_description.pc  qutms_autonomous_gazebo.pc
catkin_ws-DO_NOT_USE/src/qutms_autonomous_description/: CMakeLists.txt  README.md
catkin_ws-DO_NOT_USE/src/qutms_autonomous_gazebo/: CMakeLists.txt  package.xml
catkin_ws-DO_NOT_USE/src/qutms_autonomous_gazebo/plugins/: CMakeLists.txt  qev2_drive_plugin.cc
catkin_ws-DO_NOT_USE/src/robot_control/: CMakeLists.txt
cylinder/: model.config  model.sdf
eufs_description/meshes/: cone.dae
ground_friction_large/: ground_with_friction.sdf  model.config
horizon_lidar/: horizon_lidar.sdf
lakeside_track/: model.config  model.sdf
launch/: acceleration_launch.launch  lakeside_launch.launch  lakeside_r_launch.launch  skidpad_launch.launch  winton_launch.launch  winton_r_launch.launch
pose_fuse/: CMakeLists.txt  package.xml  test.launch
qut_description/meshes/: cone_big.dae
qutms_autonomous/: CMakeLists.txt  package.xml  readme.txt  sdf.xml
qutms_autonomous/config/: control.yaml  qev2_default.rviz
qutms_autonomous/launch/: acceleration_launch.launch  joy_launch.launch  lakeside_launch.launch  lakeside_r_launch.launch  qev2_empty_world.launch  skidpad_launch.launch  spawn_qev2.launch  winton_launch.launch  winton_r_launch.launch
qutms_autonomous/models/Acceleration_test_track/: model.sdf
qutms_autonomous/models/Backwards_Lakeside_test_track/: model.sdf
qutms_autonomous/models/Backwards_Winton_test_track/: model.sdf
qutms_autonomous/models/Lakeside_test_track/: model.config  model.sdf
qutms_autonomous/models/Skidpad_test_track/: model.sdf
qutms_autonomous/models/Winton_test_track/: model.config  model.sdf
qutms_autonomous/nodes/: ls_to_pc2.cpp  qev2_drive_node.cpp
qutms_autonomous/plugins/: qev2_drive_plugin.cc  qev2_velpub.cc
qutms_autonomous/plugins/include/: horizon_lidar_plugin.h
qutms_autonomous/plugins/src/: horizon_lidar_plugin.cpp
qutms_autonomous/pose_files/Skidpad/: model.config  track.txt
qutms_autonomous/pose_files/Winton/: model.sdf
qutms_autonomous/src/: lidar_pipeline.cpp
qutms_autonomous/urdf/: qev2.urdf.xacro  qev2_base_gazebo.xacro  wheel_front.urdf.xacro  wheel_rear.urdf.xacro
qutms_autonomous/urdf/sensors/: qev2_gps.urdf.xacro  qev2_horizon_lidar.urdf.xacro  qev2_imu.urdf.xacro  qev2_zed_camera.urdf.xacro
qutms_autonomous/worlds/: qev2_drive.world
qutms_autonomous_nodes/: CMakeLists.txt  package.xml
qutms_autonomous_nodes/launch/: image_launch.launch  kf_test_launch.launch  lidar_clustering.launch  teleop.launch
qutms_autonomous_nodes/rviz/: lidar_clustering.rviz
qutms_autonomous_nodes/src/: auto_controller.cpp  gps_pub.cpp  image_pipeline.cpp  imu_pub.cpp  joy_handle.cpp  kalman_filter.cpp  lidar_clustering.cpp  model_controller.cpp  path_maker.cpp  state_machine.cpp  xml_to_pose.cpp
qutms_autonomous_nodes/src/Text Files/: KITTI_accel_flu.txt  KITTI_accel_xyz.txt  KITTI_att.txt  KITTI_brate_flu.txt  KITTI_brate_xyz.txt  KITTI_gps.txt
qutms_autonomous_nodes/src/from_qutms_autonomous/: joy_handle.cpp  spline_fit.cpp  state_machine.cpp  xml_to_pose.cpp
qutms_description/: CMakeLists.txt  package.xml
qutms_description/models/acceleration_track/: model.config  model.sdf
qutms_description/models/big_cone/: model.sdf
qutms_description/models/blue_cone/: model.sdf
qutms_description/models/circle_track/: model.config  model.sdf
qutms_description/models/lakeside_track/: model.config  model.sdf
qutms_description/models/orange_cone/: model.sdf
qutms_description/models/skidpad_track/: model.config  model.sdf
qutms_description/models/small_track/: model.config  model.sdf
qutms_description/models/winton_track/: model.config  model.sdf
qutms_description/models/yellow_cone/: model.sdf
qutms_description/qev/: config.yaml  qev.urdf.xacro
qutms_description/raw_track_data/: lakeside_GPS.csv  winton_GPS.csv
qutms_description/sensors/: gps.urdf.xacro  horizon_lidar.urdf.xacro  imu.urdf.xacro  zed_camera.urdf.xacro
qutms_description/urdf/: car_base.urdf.xacro  plugins.gazebo.xacro  wheels.urdf.xacro
qutms_description/urdf/sensors/: qev2_gps.urdf.xacro  qev2_horizon_lidar.urdf.xacro  qev2_imu.urdf.xacro  qev2_zed_camera.urdf.xacro
qutms_gazebo/: CMakeLists.txt  package.xml
qutms_gazebo/launch/: acceleration_track.launch  circle_track.launch  empty.launch  lakeside_track.launch  load_car.launch  skidpad_track.launch  small_track.launch  winton_track.launch
qutms_gazebo/worlds/: acceleration_track.world  circle_track.world  lakeside_track.world  skidpad_track.world  small_track.world  winton_track.world
qutms_gazebo_plugins/: CMakeLists.txt  package.xml
qutms_gazebo_plugins/gazebo_race_car_model/: CMakeLists.txt
qutms_gazebo_plugins/gazebo_race_car_model/include/: definitions.hpp  gazebo_ros_race_car.hpp  vehicle_model.hpp
qutms_gazebo_plugins/gazebo_race_car_model/src/: gazebo_ros_race_car_model.cpp  vehicle_model.cpp
qutms_gazebo_plugins/gazebo_race_car_model/src/models/: dynamic_bicycle.cpp  point_mass.cpp
velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: GazeboRosVelodyneLaser.h
velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
worlds/: qev2_drive.world
yoloController/: detectCones.py  yoloTester.py
zed_camera/: model.config  zed_camera.sdf
(+8 files in other folders)
