<?xml version="1.0"?>
<package format="2">
  <name>pose_fuse</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="qutmotorsport.team@gmail.com">QUT MS Team</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_localization</depend>
</package>
