<?xml version="1.0"?>
<package format="2">
  <name>qutms_autonomous_nodes</name>
  <version>0.0.0</version>
  <description>The qutms_autonomous_nodes package</description>

  <maintainer email="phillipdiekmann@irt.rwth-aachen.de">Phillip Diekmann</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
