<?xml version="1.0"?>
<package format="2">
    <name>qutms_gazebo</name>
    <version>0.0.0</version>
    <description>The qutms_gazebo package</description>

    <maintainer email="qutmotorsport.team@gmail.com">QUT MS Team</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslint</build_depend>

    <depend>gazebo_ros</depend>
    <depend>qutms_description</depend>
    <depend>controller_manager</depend>
    <depend>velodyne_simulator</depend>
    <depend>effort_controllers</depend>
    <depend>velocity_controllers</depend>
    <depend>joint_state_controller</depend>
    <depend>gazebo_ros_control</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf</depend>

</package>
