<?xml version="1.0"?>
<package format="2">
    <name>qutms_gazebo_plugins</name>
    <version>1.0.0</version>
    <description>Gazebo plugins for Formula Student simulations</description>

    <maintainer email="qutmotorsport.team@gmail.com">QUT MS Team</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_msgs</depend>
    <depend>gazebo_plugins</depend>
    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>nodelet</depend>
    <depend>nav_msgs</depend>
    <depend>ackermann_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf</depend>

    <exec_depend>message_runtime</exec_depend>

    <test_depend>rostest</test_depend>

</package>